# TCC

./: .gitignore  apply_transform.sh  canny.py  cdt.ipynb  cdt.py  requirements.txt
insert_noise/: CMakeLists.txt  README.md
insert_noise/.cache/clangd/index/: main.cpp.38FA6F6D4F86AC80.idx
insert_noise/img/: G0010117.txt  G0010117_pos5.txt
insert_noise/src/: main.cpp
